[package]
name = "async-stream"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
compat = ["futures01", "futures-preview/compat"]

[dependencies]
futures-preview = "0.3.0-alpha.18"
futures01 = { package = "futures", version = "0.1", optional = true }
